--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/anatole"]
 	path = themes/anatole
 	url = https://github.com/lxndrblz/anatole.git
+[submodule "public"]
+	path = public
+	url = git@github.com:vical1024/leeminwoodev_hugo.github.io.git
+	branch = master
